// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF kSxyUo"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF jhwJpD"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF jMoVZV"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF bigLGm"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF gSvxTp"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF gMdSOH"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF kSxyUo"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF jhwJpD"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF jMoVZV"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF kSxyUo"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF jhwJpD"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF jMoVZV"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF kSxyUo"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF jhwJpD"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF jMoVZV"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
        dir="rtl"
      >
        medium
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF kSxyUo"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dIZBxk eAUOCK"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
        dir="rtl"
      >
        large
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF jhwJpD"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dIZBxk eAUOCK"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF jMoVZV"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fOpBKL dUFjbR"
        >
          xlarge
        </label>
        <div
          className="sc-dIZBxk eAUOCK"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF kSxyUo"
          placeholder="medium"
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF jhwJpD"
          placeholder="large"
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF ZbdbE"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF jmtPon"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <div
        className="sc-iKKmqK BJgLZ"
      >
        <input
          className="sc-oTTbF sDOQc"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK fQvxgz"
      >
        <input
          className="sc-oTTbF jMoVZV"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
        <div
          className="sc-dIZBxk PzDPl"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
